--- a/client/src/App.css
+++ b/client/src/App.css
@@ -25,3 +25,13 @@
  label, legend {
    text-align: right;
  }
+
+ .footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 5vh;
+  background-color: teal;
+  color: white;
+  margin-top: 5em;
+}
